test/error/lexer_files/char.err
File "lexer_files/char.st", line 1, character 6:
1 | x := ~.
         ^
Error: Lexing error.
Hint: Unexpected character '~'.
